dnl Autoconf configuration script mpeg2dec
dnl 
dnl Aaron Holtzman - May 1999
dnl
AC_INIT(parse.c)
AC_CANONICAL_HOST
AC_PREREQ(2.13)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(mpeg2dec, 0.1.6)

AM_MAINTAINER_MODE
AC_PROG_CC
AC_PROG_GCC_TRADITIONAL
AC_PROG_RANLIB


dnl 
dnl Display driver probing...
dnl

AC_ARG_ENABLE(mga,
  [  --disable-mga           make a version not using MGA],
  enable_mga=no, enable_mga=yes)
if test x$DISPLAY_DRIVER = x -a x$enable_mga = xyes; then
  AC_MSG_CHECKING(for /dev/mga_vid)
  if test -c "/dev/mga_vid"; then
    AC_MSG_RESULT(found)
    DISPLAY_DRIVER=display_mga_vid.o
    DRIVERS=drivers
  else
    AC_MSG_RESULT(not found)
  fi
fi

AC_ARG_ENABLE(gatos, 
  [  --disable-gatos         make a version not using GATOS],
  enable_gatos=no, enable_gatos=yes)
if test x$DISPLAY_DRIVER = x -a x$enable_gatos = xyes; then
   AC_CHECK_LIB(gatos, main, 
     [ DISPLAY_DRIVER=display_gatos.o
       LIBS="$LIBS -lgatos" ], , -L/usr/X11R6/lib -L/usr/lib -L/usr/local/lib)
fi

if test x$DISPLAY_DRIVER = x; then
  AC_MSG_WARN(No accelerated display driver found, using X11)
  DISPLAY_DRIVER=display_x11.o
fi

CONFIG_OBJS="$CONFIG_OBJS $DISPLAY_DRIVER"
AC_SUBST(CONFIG_OBJS)
AC_SUBST(DRIVERS)


dnl There must be a better way to check for SMP....
AC_MSG_CHECKING(for SMP)
AC_SUBST(MOD_CFLAGS)
if uname -a | grep SMP >/dev/null; then
	AC_MSG_RESULT(yes)
	MOD_CFLAGS=-D__SMP__
else
	AC_MSG_RESULT(no)
fi

dnl Checks for libraries. (X11)
AC_PATH_XTRA

dnl Figure out which OS we're on and what to do about it
case "$host" in
*-linux*) ;;
*-solaris*) ;;
*) ;;
esac

dnl Set the appropriate architecture define
case "$host" in
i?86-*)
	AC_DEFINE(__i386__) 
	CONFIG_OBJS="$CONFIG_OBJS idct_mmx.o idct_block_mmx.o motion_comp_mmx.o";;
alpha*-*) AC_DEFINE(__alpha__);;
sparc-*) AC_DEFINE(__sparc__);;
ppc-*) AC_DEFINE(__ppc__);;
*) echo "$host is not currently supported by mpeg2dec"; exit 1;;
esac

AC_OUTPUT( tools/Makefile drivers/Makefile Makefile ) 
