dnl Autoconf configuration script mpeg2dec
dnl 
dnl Aaron Holtzman - May 1999
dnl
AC_INIT(mpeg2dec.c)
AC_CANONICAL_HOST
AC_PREREQ(2.13)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(mpeg2dec, 0.1.7-cvs)

AM_MAINTAINER_MODE
AC_PROG_CC
AC_PROG_GCC_TRADITIONAL
AC_PROG_RANLIB
AC_PROG_LN_S
AC_C_BIGENDIAN

AC_LIBTOOL_DLOPEN
AM_DISABLE_STATIC
AM_PROG_LIBTOOL

AC_SUBST(GLOBAL_CFLAGS)
AC_SUBST(ROOT_CFLAGS)
AC_SUBST(TOOLS_CFLAGS)

dnl Figure out which OS we're on and what to do about it
case "$host" in
*-linux*) ;;
*-solaris*) ;;
*) ;;
esac

dnl Set the appropriate architecture define
case "$host_alias" in
i?86-* | k?-*) dnl catch i386,i486,i586,i686,k6,k7
	AC_DEFINE(__i386__) 
	case "$host_alias" in
		i386-*) dnl who are we kidding?
			GLOBAL_CFLAGS="$GLOBAL_CFLAGS -march=m386";;
		i486-*)
			GLOBAL_CFLAGS="$GLOBAL_CFLAGS -march=m486";;
		i586-*)
			GLOBAL_CFLAGS="$GLOBAL_CFLAGS -march=pentium";;
		i686-*)
			GLOBAL_CFLAGS="$GLOBAL_CFLAGS -march=pentiumpro";;
		k6-*)
			GLOBAL_CFLAGS="$GLOBAL_CFLAGS -march=k6";;
		k7-*)
			GLOBAL_CFLAGS="$GLOBAL_CFLAGS -march=k7";;
	esac;;
alpha*-*) AC_DEFINE(__alpha__);;
sparc-*) AC_DEFINE(__sparc__);;
ppc-*) AC_DEFINE(__ppc__);;
*) echo "$host is not currently supported by mpeg2dec"; exit 1;;
esac


dnl
dnl get location of kernel headers
dnl
AC_ARG_WITH(kernel-headers,
        [  --with-kernel-headers   specify the location of the kernel headers 
                           [/usr/src/linux/include] ],
[KERNEL_INCLUDES=$withval],				    
[KERNEL_INCLUDES=/usr/src/linux/include])
AC_SUBST(KERNEL_INCLUDES)

builtin(include,libmpeg2/configure.incl)
builtin(include,libvo/configure.incl)

AC_OUTPUT( libvo/Makefile libmpeg2/Makefile tools/Makefile drivers/Makefile Makefile ) 
